@@ -3,7 +3,11 @@
     <words>
       <w>caissie</w>
       <w>curauth</w>
+      <w>nicename</w>
+      <w>popup</w>
       <w>printf</w>
+      <w>sprintf</w>
+      <w>tagline</w>
     </words>
   </dictionary>
 </component>
