@@ -7,10 +7,10 @@
                     <div <?php post_class(); ?> id="post-<?php the_ID(); ?>">
                         <h2><a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e( 'Permanent Link to', 'nona' ); ?> <?php the_title_attribute(); ?>"><?php the_title(); ?></a></h2>
                         <div class="post-details">
-                            <?php printf( __('Posted by %1$s on %2$s.', 'nona'), get_the_author_meta( 'display_name' ), get_the_time( get_option( 'date_format' ) ) );
+                            <?php printf( __('Posted by %1$s on %2$s ', 'nona'), get_the_author_meta( 'display_name' ), get_the_time( get_option( 'date_format' ) ) );
                              comments_popup_link( __( 'with No Comments', 'nona' ), __( 'with 1 Comment', 'nona' ), __( 'with % Comments', 'nona' ), '', __( 'with Comments Closed', 'nona' ) );
-                             edit_post_link( __( 'Edit', 'nona' ), __( '&#124; ', 'nona' ), __( '', 'nona' ) ); ?><br />
-                            <?php _e( ' in ', 'nona' ); the_category( ', ' ); ?><br />
+                             edit_post_link( __( 'Edit', 'nona' ), __( '&#124;', 'nona' ), __( '', 'nona' ) ); ?><br />
+                            <?php _e( 'in ', 'nona' ); the_category( ', ' ); ?><br />
                             <?php the_tags( __( 'as ', 'nona' ), ', ', '' ); ?><br />
                         </div> <!-- .post-details -->
                         <?php if ( has_post_thumbnail() ) {
@@ -39,4 +39,4 @@
     </div> <!-- #main-blog -->
 <?php get_sidebar(); ?>
 <?php get_footer();?>
-<?php /* Last revised October 16, 2011 v1.4 */ ?>
+<?php /* Last revised October 17, 2011 v1.4 */ ?>
